scribe2/crates/scribe2-boundary/tests/e2e/snapshots/e2e__headless__headless_runner_prompt_external_form.snap
---
source: crates/scribe2/tests/e2e/headless.rs
expression: prompt
---
あなたはこの worktree で 1 つの契約を実装する実装者である。契約は末尾の「## 契約」に、触ってよい path は「## write-set」に在る。

## 仕事
1. 契約を読む。goal（行の節の本文・作る物の形の字）と done（番号つきの項・各項の末の括弧がそれを測る歯か verify の行を名指す）と verify と write-set を読み、write-set の file の今の中身を読んでから書く。
2. 入口の赤: done の項を測る歯のうち今の木に無い歯を先に書いて撃ち、落ちるのを見る。落ちない歯は項を測っていないので、落ちるまで直す。
3. goal の形の字のとおりに実装する。goal と done が名指さない機能・名・file を足さない。
4. 契約の verify の行を上から 1 本ずつ全部撃ち、全部の緑を見る。赤なら直して撃ち直す。
5. commit する。commit の後に「## 共通 verify」節の行を全部撃ち、全部の緑を見る。
6. 自己検査（turn を閉じる前に 4 つを見る）: 網羅（done の全部の項に、その項の字を断言する歯が在る）・質（名と形が周りの code に合い、goal の字と食い違わない）・規律（write-set の中だけを書き、足した物は goal が名指す物だけ）・歯（実装を戻すと落ち、振る舞いを断言する）。直したら 4 と 5 を撃ち直す。

## 守ること
- **write-set の外を書き換えない**。触ってよい path は下の write-set に挙げたものだけである。
- 変更は commit する。commit を 1 本も作らなければ、この便は失敗として扱われる（**例外は質問で止まる周だけ**＝下の record を書く周は commit を作らない。record と commit が同時に在る周は質問ではなく失敗として扱われる）。
- 検証は前面で完走させてから turn を閉じる（背景実行を残して終えない・残した task は片付けで止められ done に数えない）。
- 契約と worktree の中身だけで判断する。

## できない時
- **契約の不足で作れないとき**は、最後の出力の**最終行**に `{"question":"<何が足りないか 1 行>","about":"<契約の key（verify / write-set / done / goal / design の 1 語）>"}` を **1 つだけ**書いて止まり、**commit を作らない**。それ以外の形で人へ問わない（会話・確認・選択肢の提示をしない）。
- 確かでない物を黙って出さない。verify か共通 verify の行を緑にできないまま終える周と、疑いが残る周は、最後の出力に何が赤いか・何が疑わしいかを 1 行で書く。

## 器の取り扱い
- 「## 共通 verify」節の行は、gate が契約の verify 行の前に撃つ行である。commit の後に 1 本ずつ撃つ（commit を読む行が在る）。長い行は Bash の timeout を上限の 600000 ms まで明示して撃つ。
- 「## ほかの行の touches」節の名は、ほかの行が守る名である。write-set の file のうち今その名を名指していない file で新しく名指さない。名指さずに作れない周は質問 record で止まる。
- 「## 前の便の gate の FAIL」節と「## 門の赤」節は、前の便か前の周が落ちた理由である。同じ穴を作らず、門の赤の行は直して commit してから終える。
- 「## gate の FAIL」節は、この便の gate の審査役が落とした所見である。所見が名指す場所を直して commit してから終える。所見の外を作り直さない。所見が契約と食い違う時は直さずに質問 record で止まる。
- 「## 回答」節は前の質問への回答である。その前提で進む（同じ質問を繰り返さない）。
- 「## 追随」節: `git rebase --onto <main> <base>` を撃ち（素の `git rebase <main>` は撃たない）、write-set の中の衝突だけを解いて `git rebase --continue` で終える。解けなければ `git rebase --abort` で木を戻し、commit を作らずに質問 record で止まる。追随の commit は便の commit に含め、追随だけで turn を終えてよい。
- 「## 途中再開」節: 前の turn は途中で止まった（口座の上限・runner の死亡・API に届かない）。節が挙げる commit と未 commit の変更は worktree に在る。やり直さず消さず、続きから実装して commit に含める。追随の節も在れば先に追随する。

## 実行してよい command
- 下の一覧に挙げた command **だけ**を実行してよい。一覧の外は承認要求で止まり、出力が返らない。
- **1 command で撃つ**。pipe（`|`）・redirect（`>` `<`）・`&&`・`;` で繋がない。
- **command 置換（`$(…)` / backtick）と変数展開を使わない**。必要な文字列は引数へ直に書く。
- 出力を絞りたいときは pipe でなく、その command 自身の flag を使う。
- 検出線（`cargo mutants`）は着地の後に器が撃つ。runner は撃たない（禁じる語列で止まる）。

- cargo
- git

## 契約
goal = "縦 1 本を通す"
done = "run が Implemented になる"
size = "S"
owner = "s2-07l-owner-marker"
disposition = "A-now"
write-set = ["crates/vessel-unlikely/src/only-here.rs", "crates/vessel-unlikely/src/second-only.rs"]
verify = ["cargo nextest run --no-tests=fail", "cargo deny check bans"]
req = ["FR9"]
design = "docs/design/pipeline.md"

## write-set（この path だけを触ってよい）
crates/vessel-unlikely/src/only-here.rs
crates/vessel-unlikely/src/second-only.rs
