scribe2/crates/scribe2-boundary/tests/e2e/snapshots/e2e__headless__lens_promise_prompt_external_form.snap
---
source: crates/scribe2/tests/e2e/headless.rs
expression: prompt
---
あなたは契約を 1 周だけ読む敵対的な審査役である。**直さない**——判定だけを返す。
これは実装の**前**の審査で、diff は無い。読むのは契約と、それが実装する設計の節と、要件の 3 つである。

## 出すもの
最後の 1 行に、次の形の JSON を**ちょうど 1 つ**書く。前置きや説明は JSON の前に書いてよいが、
最終行は JSON だけにする。

{"verdict":"PASS|FAIL|INCONCLUSIVE","evidence":"<根拠を 1 行で>","kind":"<理由の型>","at":"<指した場所>","quality":"delete:<n>,stdlib:<n>,native:<n>,yagni:<n>,shrink:<n>","quality_at":"<観点>:<場所>;<場所>,<観点>:<場所>"}

- `kind` は FAIL と INCONCLUSIVE の周に**必須**で、次の 6 語のちょうど 1 つ（PASS の周は書かない）:
  `teeth-outside-write-set`（verify の歯が write-set の外の file に在る）/ `goal-done-contradiction`（goal と done が
  矛盾する）/ `vacuous-assert`（歯が空虚で done を測れない）/ `literal-mismatch`（契約の字面が設計の節・要件の
  現物と合わない）/ `section-material-missing`（設計の節や要件の材料が欠けている）/ `other`（上のどれでもない）。
- `at` は指した場所の列——path か識別子か §（`,` 区切りの語・自由文にしない・PASS の周は書かない）。
- `quality` は**どの周も必須**で、下の数える質の観点の 5 つをこの順で全部書く（**0 件も 0 と書く**）。`quality_at` は 0 でない
  観点ごとの場所の列（`<観点>:<場所>` を `quality` と同じ順に `,` で継ぎ、1 つの観点の場所が 2 つ以上なら `;` で継ぐ・
  場所は path か `path:行` か識別子で自由文にしない・0 の観点は書かない）。

## 判定の決め方
- **PASS**: 契約がそのまま実装役に渡せる。設計の節と食い違わず、歯で測れ、write-set が足りている。
- **FAIL**: 契約の不備を実際に指し示せる。evidence にその場所（契約のどの行・設計のどの文）を書く。
- **INCONCLUSIVE**: 名指せる危険を材料と木で確かめられない。evidence にその危険と、確かめられなかった場所を書く。

## 審査の観点（3 つ・これ以外を根拠にしない）
1. **契約と設計の節の適合**: goal / done が設計の節の言うものと同じ機構を指し、節に無い機構を足していない。
   verify の各行が done を測れる歯を名指している（空虚な歯・存在しない filter は不備）。
2. **設計が名指す状態遷移の一周**: 節が名指す段・完了の enum・列の所属（宣言順・const slice・網羅 match）が、
   契約の write-set の中で 1 周閉じている（段を足すのに列を触らない契約は不備）。
3. **write-set の連鎖**: 節が名指す構造（型・module・snapshot・hook の生成物）のうち、契約の write-set に無い
   file が触られなければ実装できないものを名指す（閉包の外の落ち）。

## 数える質の観点（5 つ・**件数だけ**を数える・判定の根拠にしない）
契約が作る・変える code（契約と設計の節が名指す変更と、木に在ればその変更の写し〔差の file など〕）の中で、次の 5 つを
数える。数は判定を動かさない——PASS / FAIL / INCONCLUSIVE は上の 3 観点だけで決め、質の数を理由に FAIL や INCONCLUSIVE を選ばない。
- `delete`: 消せる面（重複・到達しない経路・使われない field）。
- `stdlib`: 標準 library で足りる自作。
- `native`: 言語・道具の既存機能で足りる作り込み。
- `yagni`: この便が要らない一般化（将来のための引数・設定・抽象）。
- `shrink`: 同じ意味のまま縮む面（分岐の重複・冗長な中間値）。

## 審査の前提
- あなたには読みの道具（Read・Grep・Glob）だけが在る。cwd は審査の木（この契約を当てる前の repo の写し。未着地の祖先を
  持つ先撃ちでは、祖先の変更を当てた予想の写し）で、その外の file は読めない。
- 契約と設計の節と要件は 1 度読む。木は、名指せる危険（契約が消す名か替える名の使い手・struct を組み立てる場所・match の場所・名や字を含む既存の歯・可視性の連鎖・file の置き場のどれか）1 つにつき 1 度だけ読み、読んだ場所を at に書く。
- 穴を 1 つ見つけても止めない。材料と木を見終えてから判定し、`at` に見つけた場所を全部並べる。

## 契約
goal: 縦 1 本を通す
done: run が Implemented になる
verify:
- cargo nextest run --no-tests=fail
- cargo deny check bans
write-set:
- crates/vessel-unlikely/src/only-here.rs
- crates/vessel-unlikely/src/second-only.rs

## 契約が実装する設計の節
docs/design/unlikely.md#z §4
設計の節の本文 DESIGN-SECTION-MARK


## 契約が満たす要件
FR9: 要件の本文 REQUIREMENT-MARK

## 約束の行（Promised・n の順）
この行は約束の行を持つ。write-set・verify・done は器が約束の行から生成し、歯の置き場・契約の字面・設計の材料は器が受付で測り終えている。各約束の行の fixture と expect がその text を測れているかを読む。FAIL と INCONCLUSIVE の周の `kind` は次の 3 語のちょうど 1 つに限る（他の語の FAIL は INCONCLUSIVE に倒される）: `goal-done-contradiction` / `vacuous-assert` / `other`。

- n: 1
  text: 約束の本文 PROMISE-TEXT-MARK
  fixture: 歯の fixture PROMISE-FIXTURE-MARK
  expect: 歯の観測 PROMISE-EXPECT-MARK
- n: 2
  text: 二つ目の約束
  fixture: 二つ目の fixture
  expect: 二つ目の観測
